--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -2,18 +2,29 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/start_btn"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/firstlogo"
     tools:context=".FirstFragment">
 
-    <ImageButton
+    <Button
         android:id="@+id/start_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#00FFFFFF"
-        android:src="@drawable/button"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="651dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="30dp"
+        android:backgroundTint="#006064"
+        android:text="Let's Start!"
+        android:textColorHint="#006064"
+        android:textColorLink="#006064"
+        android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/rounded_background"
+        app:strokeColor="#006064" />
 </androidx.constraintlayout.widget.ConstraintLayout>
