Updated Navgraph and added BG to all pages.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,30 +45,65 @@
         <argument
             android:name="email"
             app:argType="string" />
+        <action
+            android:id="@+id/action_mainPageFragment_to_lessonsFragment"
+            app:destination="@id/lessonsFragment" />
+        <action
+            android:id="@+id/action_mainPageFragment_to_scoreBoardFragment"
+            app:destination="@id/scoreBoardFragment" />
+        <action
+            android:id="@+id/action_mainPageFragment_to_userProfileFragment"
+            app:destination="@id/userProfileFragment" />
     </fragment>
     <fragment
         android:id="@+id/lessonsFragment"
         android:name="com.example.genius.LessonsFragment"
         android:label="fragment_lessons"
-        tools:layout="@layout/fragment_lessons" />
+        tools:layout="@layout/fragment_lessons" >
+        <action
+            android:id="@+id/action_lessonsFragment_to_lessionDetailsFragment"
+            app:destination="@id/lessionDetailsFragment" />
+        <argument
+            android:name="user"
+            app:argType="com.example.genius.Model.User" />
+    </fragment>
     <fragment
         android:id="@+id/scoreBoardFragment"
         android:name="com.example.genius.ScoreBoardFragment"
         android:label="fragment_score_board"
-        tools:layout="@layout/fragment_score_board" />
+        tools:layout="@layout/fragment_score_board" >
+        <argument
+            android:name="user"
+            app:argType="com.example.genius.Model.User" />
+    </fragment>
     <fragment
         android:id="@+id/lessionDetailsFragment"
         android:name="com.example.genius.LessionDetailsFragment"
         android:label="fragment_lession_details"
-        tools:layout="@layout/fragment_lession_details" />
+        tools:layout="@layout/fragment_lession_details" >
+        <argument
+            android:name="user"
+            app:argType="com.example.genius.Model.User" />
+    </fragment>
     <fragment
         android:id="@+id/userProfileFragment"
         android:name="com.example.genius.UserProfileFragment"
         android:label="fragment_user_profile"
-        tools:layout="@layout/fragment_user_profile" />
+        tools:layout="@layout/fragment_user_profile" >
+        <argument
+            android:name="user"
+            app:argType="com.example.genius.Model.User" />
+        <action
+            android:id="@+id/action_userProfileFragment_to_editUserProfileFragment"
+            app:destination="@id/editUserProfileFragment" />
+    </fragment>
     <fragment
         android:id="@+id/editUserProfileFragment"
         android:name="com.example.genius.EditUserProfileFragment"
         android:label="fragment_edit_user_profile"
-        tools:layout="@layout/fragment_edit_user_profile" />
+        tools:layout="@layout/fragment_edit_user_profile" >
+        <argument
+            android:name="user"
+            app:argType="com.example.genius.Model.User" />
+    </fragment>
 </navigation>
