--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -53,8 +53,7 @@
             app:destination="@id/scoreBoardFragment" />
         <action
             android:id="@+id/action_mainPageFragment_to_userProfileFragment"
-            app:destination="@id/userProfileFragment"
-            app:launchSingleTop="true" />
+            app:destination="@id/userProfileFragment" />
     </fragment>
     <fragment
         android:id="@+id/lessonsFragment"
@@ -97,6 +96,9 @@
         <action
             android:id="@+id/action_userProfileFragment_to_editUserProfileFragment"
             app:destination="@id/editUserProfileFragment" />
+        <action
+            android:id="@+id/action_userProfileFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/editUserProfileFragment"
