--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -53,7 +53,8 @@
             app:destination="@id/scoreBoardFragment" />
         <action
             android:id="@+id/action_mainPageFragment_to_userProfileFragment"
-            app:destination="@id/userProfileFragment" />
+            app:destination="@id/userProfileFragment"
+            app:launchSingleTop="false" />
     </fragment>
     <fragment
         android:id="@+id/lessonsFragment"
