Scoreboard Page Done, need to run some tests with few users

--- a/app/src/main/res/layout/users_list_row.xml
+++ b/app/src/main/res/layout/users_list_row.xml
@@ -26,11 +26,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:background="#E3E3E3"
         android:backgroundTint="#000000"
         android:text="Name:"
         android:textColor="#FFFFFF"
-        android:textSize="28sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/userlistrow_imagev"
         app:layout_constraintTop_toTopOf="@+id/userlistrow_imagev" />
@@ -40,12 +41,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:background="#000000"
         android:backgroundTint="#000000"
         android:text="Phone:"
         android:textColor="#FFFFFF"
-        android:textSize="28sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/userlistrow_imagev"
         app:layout_constraintTop_toBottomOf="@+id/textView32" />
@@ -55,12 +56,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:background="#E3E3E3"
         android:backgroundTint="#000000"
         android:text="Score:"
         android:textColor="#FFFFFF"
-        android:textSize="28sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/userlistrow_imagev"
         app:layout_constraintTop_toBottomOf="@+id/textView33" />
@@ -72,8 +73,9 @@
         android:layout_marginEnd="8dp"
         android:background="#E3E3E3"
         android:backgroundTint="#000000"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="28sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView32"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,8 +90,9 @@
         android:layout_marginEnd="8dp"
         android:background="#E3E3E3"
         android:backgroundTint="#000000"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="28sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView33"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,8 +107,9 @@
         android:layout_marginEnd="8dp"
         android:background="#E3E3E3"
         android:backgroundTint="#000000"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="28sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView35"
         app:layout_constraintEnd_toEndOf="parent"
